# Stellar-STOCKen-CAPITAL

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yaml
contracts/: Makefile
contracts/escrow/: Cargo.toml  Makefile
contracts/escrow/src/: events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/escrow/src/test/: add_proposal.rs  initialize.rs  register.rs  signatures_response.rs  test.rs
contracts/escrow_test/: Cargo.toml  Makefile
contracts/escrow_test/src/: lib.rs
contracts/notes_nft/: Cargo.toml  Makefile
contracts/notes_nft/src/: errors.rs  events.rs  lib.rs  test.rs  types.rs
contracts/notes_nft/src/test/: initialize.rs  mint.rs  transfer.rs
contracts/signaturit_oracle/: Cargo.toml  Makefile
contracts/signaturit_oracle/src/: error.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/signaturit_oracle/src/oracle_traits/: mod.rs  oracle_implementer.rs
contracts/signaturit_oracle/src/test/: initialize.rs  register.rs  signature_response.rs
libs/oracle_traits/: Cargo.toml
libs/oracle_traits/src/: lib.rs
libs/storage/: Cargo.toml
