[package]
name = "notes_nft"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
uuid = {workspace = true, features = ["v4", "fast-rng"]}