[package]
name = "signaturit_oracle"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
storage = { workspace = true }
oracle_traits = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
uuid = {workspace = true, features = ["v4", "fast-rng"]}
